// accounts__user_profile/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.user_profile;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message User {

  int64 id = 1;
  string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  string full_name = 5;
  string initials = 6;
  string display_username = 7;
  optional string company = 8;
  optional string phone = 9;
  optional string position = 10;
  optional string avatar = 11;
  bool is_staff = 12;
  bool is_superuser = 13;
  google.protobuf.Timestamp date_joined = 14;
  optional google.protobuf.Timestamp last_login = 15;
  int64 unanswered_messages_count = 16;
}

message Userprofileupdaterequest {

  optional string first_name = 1;
  optional string last_name = 2;
  optional string company = 3;
  optional string phone = 4;
  optional string position = 5;
}

message Patcheduserprofileupdaterequest {

  optional string first_name = 1;
  optional string last_name = 2;
  optional string company = 3;
  optional string phone = 4;
  optional string position = 5;
}